# test_work

./: README.md  embedding_service.py  gbif_client.py  main.py  pyproject.toml
